[gd_scene load_steps=4 format=2]

[ext_resource path="res://themes/default_theme.tres" type="Theme" id=1]
[ext_resource path="res://scenes/gui/global_gui.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/gui/basic_dialogue.gd" type="Script" id=3]

[node name="Node2D" type="Node2D"]
script = ExtResource( 3 )

[node name="DialogueBox" type="ColorRect" parent="."]
margin_left = 50.0
margin_top = 481.0
margin_right = 974.0
margin_bottom = 581.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ShowText" type="Label" parent="DialogueBox"]
margin_left = 10.0
margin_top = 10.0
margin_right = 914.0
margin_bottom = 90.0
theme = ExtResource( 1 )
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NextButton" type="Button" parent="DialogueBox"]
margin_left = 739.0
margin_top = -47.0
margin_right = 924.0
theme = ExtResource( 1 )
text = "GL_DIAG_NEXT"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BasicGUI" parent="." instance=ExtResource( 2 )]

[node name="FirstParse" type="Timer" parent="."]
wait_time = 0.1
one_shot = true
autostart = true

[node name="BGM" type="AudioStreamPlayer" parent="."]
[connection signal="pressed" from="DialogueBox/NextButton" to="." method="_on_NextButton_pressed"]
[connection signal="timeout" from="FirstParse" to="." method="_on_FirstParse_timeout"]
